--- a/app/src/main/res/drawable-v24/custom_button_no_bg.xml
+++ b/app/src/main/res/drawable-v24/custom_button_no_bg.xml
@@ -4,6 +4,6 @@
     <corners android:radius="25dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/colorAccent" />
+        android:color="@android:color/white" />
     <solid android:color="@android:color/transparent" />
 </shape>
