--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#3030f2</color>
+    <color name="colorPrimaryDark">#000859</color>
+    <color name="colorAccent">#3060f2</color>
+    <color name="colorAccentTransp">#1F3060f2</color>
 
     <!-- Text colors -->
     <color name="colorTextBlack87">#DE000000</color>
