--- a/app/src/main/res/layout/full_content_password_bottomsheet.xml
+++ b/app/src/main/res/layout/full_content_password_bottomsheet.xml
@@ -8,44 +8,61 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tvEmail"
+        android:id="@+id/tvPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/roboto_light"
-        android:text="@string/txt_label_email"
+        android:text=""
         android:textColor="@color/colorTextWhite87"
         android:textSize="28sp"
-        tools:text="Digite seu e-mail" />
+        tools:text="Digite sua senha" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etEmailInput"
+        android:id="@+id/etPasswordInput"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_below="@id/tvEmail"
+        android:layout_below="@id/tvPassword"
         android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="20dp"
         android:background="@null"
         android:fontFamily="@font/roboto_light"
-        android:hint="@string/txt_email_tint"
-        android:inputType="textEmailAddress"
+        android:hint="@string/txt_label_password"
+        android:inputType="textPassword"
         android:textColor="@color/colorTextWhite87"
         android:textColorHint="@color/colorTextWhite54"
         android:textCursorDrawable="@drawable/editext_cursor"
         android:textSize="28sp" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
+    <!--android:id="@+id/fab"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_marginEnd="20dp"-->
+    <!--android:layout_marginBottom="30dp"-->
+    <!--app:backgroundTint="@color/colorAccent"-->
+    <!--app:srcCompat="@drawable/ic_arrow_forward" />-->
+
+    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
+        android:id="@+id/btn_id"
+        android:layout_width="120dp"
+        android:layout_height="55dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="30dp"
-        app:backgroundTint="@color/colorAccent"
-        app:srcCompat="@drawable/ic_arrow_forward" />
+        android:background="@drawable/button_shape"
+        android:gravity="center"
+        android:text="@string/txt_label_login"
+        android:textColor="@color/colorTextWhite87"
+        app:backgroundTint="@color/colorAccent" />
+    <!--app:spinning_bar_width="4dp" -->
+    <!--app:spinning_bar_color="#FFF"-->
+    <!--app:spinning_bar_padding="6dp"-->
 </RelativeLayout>
