--- a/app/src/main/res/drawable/ic_logo_washi.xml
+++ b/app/src/main/res/drawable/ic_logo_washi.xml
@@ -1,82 +1,82 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="893.58"
-    android:viewportHeight="896.34">
-    <path android:pathData="M893.58,448.79C893.58,659 748.52,835.36 553,883.19a451.29,451.29 0,0 1,-186 5.75q-6.59,-1.84 -13,-3.92c-123.23,-40.14 -212.75,-154.95 -215.18,-291 -0.05,-1.91 -0.08,-3.84 -0.08,-5.75v-0.94c0,-1.23 0,-2.46 0,-3.66A310.38,310.38 0,0 1,170.48 451l0.94,1.88C176.13,603 299.25,723.15 450.49,723.15c150.87,0 273.76,-119.62 279,-269.18l1.49,-3a310.3,310.3 0,0 0,31.75 -134.11c0,-1.07 0,-2.14 0,-3.22v-1.39c-0.71,-165.46 -130.18,-300.51 -293.4,-310.11a447.78,447.78 0,0 1,45.06 4.58h0C729.14,39.54 893.58,225 893.58,448.79Z">
+    android:width="1080dp"
+    android:height="1080dp"
+    android:viewportWidth="1080"
+    android:viewportHeight="1080">
+    <path android:pathData="M986.58,544.79c0,210.23 -145.06,386.58 -340.55,434.41a451.29,451.29 0,0 1,-186.04 5.75q-6.59,-1.84 -13.05,-3.92C323.71,940.88 234.19,826.08 231.76,690.06c-0.05,-1.91 -0.08,-3.84 -0.08,-5.75v-0.94c0,-1.23 0.03,-2.46 0.03,-3.66a310.38,310.38 0,0 1,31.77 -132.72l0.94,1.88c4.71,150.09 127.83,270.28 279.07,270.28 150.87,0 273.76,-119.62 279.04,-269.18l1.49,-2.98a310.3,310.3 0,0 0,31.75 -134.11c0.03,-1.07 0.03,-2.14 0.03,-3.22v-1.39C855.09,242.81 725.61,107.76 562.4,98.17a447.78,447.78 0,0 1,45.06 4.58h0.03C822.14,135.54 986.58,320.95 986.58,544.79Z">
         <aapt:attr name="android:fillColor">
             <gradient
-                android:endX="851.73"
-                android:endY="256.33"
-                android:startX="136.95"
-                android:startY="669.01"
+                android:endX="944.7323"
+                android:endY="352.3265"
+                android:startX="229.9518"
+                android:startY="765.0052"
                 android:type="linear">
                 <item
                     android:color="#FF3091F2"
                     android:offset="0.06" />
                 <item
                     android:color="#FF3086F2"
-                    android:offset="0.11" />
+                    android:offset="0.1128" />
                 <item
                     android:color="#FF3071F2"
-                    android:offset="0.24" />
+                    android:offset="0.2363" />
                 <item
                     android:color="#FF3064F2"
-                    android:offset="0.36" />
+                    android:offset="0.3576" />
                 <item
                     android:color="#FF3060F2"
-                    android:offset="0.47" />
+                    android:offset="0.4733" />
                 <item
                     android:color="#FF2F5EEE"
-                    android:offset="0.56" />
+                    android:offset="0.5573" />
                 <item
                     android:color="#FF2B57E2"
-                    android:offset="0.64" />
+                    android:offset="0.6427" />
                 <item
                     android:color="#FF254BCD"
-                    android:offset="0.73" />
+                    android:offset="0.7288" />
                 <item
                     android:color="#FF1C3BB1"
-                    android:offset="0.82" />
+                    android:offset="0.8153" />
                 <item
                     android:color="#FF10258C"
-                    android:offset="0.9" />
+                    android:offset="0.9022" />
                 <item
                     android:color="#FF020C60"
-                    android:offset="0.99" />
+                    android:offset="0.9883" />
                 <item
                     android:color="#FF000859"
                     android:offset="1" />
             </gradient>
         </aapt:attr>
     </path>
-    <path android:pathData="M763.61,312.07v1.39c0,1.07 0,2.14 0,3.22a310.65,310.65 0,0 1,-31.75 132.72l-1.33,-2.67c0,-1 0,-2 0,-3 0,-154.22 -125,-279.22 -279.22,-279.22s-279.22,125 -279.22,279.22c0,1.33 0,2.67 0.05,4 -0.29,0.55 -0.58,1.12 -0.84,1.67A310,310 0,0 0,139.52 583.5c0,1.2 0,2.43 0,3.66v0.94c0,1.91 0,3.84 0.08,5.75C142.74,734 238.32,851.4 367.8,887.36c-4.37,-0.78 -8.73,-1.62 -13,-2.54C152.13,842.25 0,662.48 0,447.2 0,200.22 200.22,0 447.2,0c1.07,0 2.17,0 3.24,0L453,0c5.7,0.08 11.35,0.26 17,0.55a0.36,0.36 0,0 1,0.24 0,307.69 307.69,0 0,1 45.06,6h0C657.06,35.93 763.61,161.57 763.61,312.07Z">
+    <path android:pathData="M856.61,408.07v1.39c0,1.07 0,2.14 -0.03,3.22a310.65,310.65 0,0 1,-31.75 132.72q-0.67,-1.33 -1.33,-2.67c0.03,-0.99 0.03,-2.01 0.03,-3.01 0,-154.22 -125.01,-279.22 -279.22,-279.22S265.08,385.5 265.08,539.72c0,1.33 0,2.67 0.05,4 -0.29,0.55 -0.58,1.12 -0.84,1.67A310.04,310.04 0,0 0,232.52 679.5c0,1.2 -0.03,2.43 -0.03,3.66v0.94c0,1.91 0.03,3.84 0.08,5.75 3.16,140.17 98.75,257.54 228.23,293.5 -4.37,-0.78 -8.73,-1.62 -13.05,-2.54C245.13,938.25 93,758.48 93,543.2 93,296.22 293.22,96 540.2,96c1.07,0 2.17,0 3.24,0.03h2.54c5.7,0.08 11.35,0.26 17,0.55a0.36,0.36 0,0 1,0.24 0,307.68 307.68,0 0,1 45.06,5.96h0.03C750.06,131.93 856.61,257.57 856.61,408.07Z">
         <aapt:attr name="android:fillColor">
             <gradient
-                android:endX="763.61"
-                android:endY="443.68"
-                android:startX="0"
-                android:startY="443.68"
+                android:endX="856.607"
+                android:endY="539.6787"
+                android:startX="93"
+                android:startY="539.6787"
                 android:type="linear">
                 <item
                     android:color="#FF3060F2"
                     android:offset="0" />
                 <item
                     android:color="#FF2E5DED"
-                    android:offset="0.14" />
+                    android:offset="0.1363" />
                 <item
                     android:color="#FF2A54DE"
-                    android:offset="0.3" />
+                    android:offset="0.3034" />
                 <item
                     android:color="#FF2246C5"
-                    android:offset="0.49" />
+                    android:offset="0.4866" />
                 <item
                     android:color="#FF1732A2"
-                    android:offset="0.68" />
+                    android:offset="0.6813" />
                 <item
                     android:color="#FF091976"
-                    android:offset="0.88" />
+                    android:offset="0.883" />
                 <item
                     android:color="#FF000859"
                     android:offset="1" />
@@ -86,50 +86,43 @@
     <path
         android:fillAlpha="0.15"
         android:fillColor="#fff"
-        android:pathData="M572,112.07l1,1c0.8,0.74 1.6,1.48 2.38,2.24 35,33.43 60.68,91.43 76.93,133.87l-2.91,-0.85c-0.72,-0.71 -1.48,-1.41 -2.22,-2.1C550.36,144.91 365.7,125.87 241.47,259.5c-98.05,120.92 -98.66,278.63 16.25,385.3 1,0.92 2,1.85 3,2.73 0.21,0.59 3.24,4.19 3.46,4.76 16.42,42.89 42.89,78.95 78.4,112.56 0.9,0.83 1.79,1.7 2.71,2.55l0.7,0.65c1.42,1.32 2.88,2.64 4.34,3.92 106.64,94.6 249.81,105.2 366.17,33.59 -3.61,2.71 -7.25,5.39 -10.92,8 -171.88,121.53 -400.67,109.91 -561.08,-39C-39.51,603.69 -10.6,279.65 125.07,137.25c0.74,-0.8 1.5,-1.62 2.26,-2.4l1.75,-1.89q6,-6.29 12.17,-12.29a0.37,0.37 0,0 1,0.16 -0.18A312.83,312.83 0,0 1,177 91h0C257.44,32.61 459.9,8 572,112.07Z"
+        android:pathData="M665.04,208.07l1.03,0.96c0.8,0.74 1.6,1.48 2.38,2.24 34.96,33.43 60.68,91.43 76.93,133.87q-1.46,-0.43 -2.91,-0.85c-0.72,-0.71 -1.48,-1.41 -2.22,-2.1 -96.9,-101.28 -281.55,-120.33 -405.78,13.31 -98.05,120.92 -98.66,278.63 16.25,385.3 0.99,0.92 1.99,1.85 3.02,2.73 0.21,0.59 3.23,4.19 3.46,4.76 16.42,42.89 42.89,78.94 78.4,112.56 0.9,0.83 1.79,1.7 2.71,2.55l0.7,0.65c1.42,1.32 2.88,2.64 4.34,3.92 106.64,94.6 249.81,105.2 366.17,33.59 -3.61,2.71 -7.25,5.39 -10.92,7.97 -171.88,121.53 -400.67,109.91 -561.08,-39.01C53.49,699.69 82.4,375.65 218.07,233.25c0.74,-0.8 1.5,-1.62 2.26,-2.4l1.75,-1.89q6,-6.29 12.17,-12.29a0.37,0.37 0,0 1,0.16 -0.18,312.84 312.84,0 0,1 35.61,-29.45h0C350.44,128.61 552.9,103.96 665.04,208.07Z"
         android:strokeAlpha="0.15" />
-    <path android:pathData="M463.95,276.41a40.78,40.78 0,0 1,-32.32 39.89c-1,0.17 -2.06,0.36 -3.1,0.54a0.43,0.43 0,0 1,-0.14 0c-100,18.24 -175.24,97.07 -175.24,191.57 0,43.53 16,83.74 43,116.23A219.05,219.05 0,0 1,216 455.07c0,-114 86.9,-207.66 198.06,-218.42 4.18,-0.42 8.41,-0.7 12.67,-0.87A40.79,40.79 0,0 1,463.95 276.41Z">
+    <path android:pathData="M556.95,372.41a40.78,40.78 0,0 1,-32.32 39.89c-1.04,0.17 -2.06,0.36 -3.1,0.54a0.43,0.43 0,0 1,-0.14 0.02c-100,18.24 -175.24,97.07 -175.24,191.57 0,43.53 15.96,83.74 42.98,116.22A219.05,219.05 0,0 1,309 551.07c0,-113.96 86.9,-207.66 198.06,-218.42 4.18,-0.42 8.41,-0.7 12.67,-0.87A40.79,40.79 0,0 1,556.95 372.41Z">
         <aapt:attr name="android:fillColor">
             <gradient
-                android:endX="257.05"
-                android:endY="543.72"
-                android:startX="363.4"
-                android:startY="292.15"
+                android:endX="350.0509"
+                android:endY="639.7161"
+                android:startX="456.4047"
+                android:startY="388.1486"
                 android:type="linear">
                 <item
                     android:color="#FF3091F2"
                     android:offset="0" />
                 <item
                     android:color="#FF3073F2"
-                    android:offset="0.3" />
+                    android:offset="0.3048" />
                 <item
                     android:color="#FF3060F2"
                     android:offset="0.48" />
                 <item
                     android:color="#FF305EF2"
-                    android:offset="0.75" />
+                    android:offset="0.751" />
                 <item
                     android:color="#FF3057F2"
-                    android:offset="0.85" />
+                    android:offset="0.8486" />
                 <item
                     android:color="#FF304CF2"
-                    android:offset="0.92" />
+                    android:offset="0.9182" />
                 <item
                     android:color="#FF303BF2"
-                    android:offset="0.97" />
+                    android:offset="0.9741" />
                 <item
                     android:color="#FF3030F2"
                     android:offset="1" />
             </gradient>
         </aapt:attr>
     </path>
-    <path android:pathData="M446.7,648.62A11.91,11.91 0,0 1,436 660.48h-0.09c-0.63,0 -1.27,0 -1.9,0 -0.79,0 -1.58,0 -2.38,0A157.94,157.94 0,0 1,315 396.12,157.94 157.94,0 0,0 432.36,637h0q3.32,0.37 6.69,0.56A11.91,11.91 0,0 1,446.7 648.62Z" />
-    <path android:pathData="M511.41,635a40.78,40.78 0,0 1,10.46 -50.26c0.84,-0.63 1.67,-1.26 2.5,-1.9a0.43,0.43 0,0 1,0.12 -0.08c80.54,-62 111.33,-166.54 68,-250.55C572.61,293.5 540,265.07 501.1,248.56A219.05,219.05 0,0 1,650 362.61c52.19,101.31 17.85,224.4 -76,284.87q-5.29,3.43 -10.86,6.57A40.79,40.79 0,0 1,511.41 635Z" />
-    <path android:pathData="M659.47,305.6" />
-    <path
-        android:fillColor="#000859"
-        android:pathData="M659.05,304.3l-0.76,6l1.96,-3.91l-1.2,-2.09z" />
-    <path
-        android:fillColor="#3091f2"
-        android:pathData="M229.11,305.49l-1.27,2.51l0.72,1.45l0.55,-3.96z" />
+    <!--<path android:pathData="M539.7,744.62a11.91,11.91 0,0 1,-10.68 11.86h-0.09c-0.63,0.02 -1.27,0.03 -1.9,0.03 -0.79,0.03 -1.58,0.03 -2.38,0.03A157.94,157.94 0,0 1,407.99 492.12,157.94 157.94,0 0,0 525.36,732.96h0.03q3.32,0.37 6.69,0.56A11.91,11.91 0,0 1,539.7 744.62Z"></path>-->
+    <!--<path android:pathData="M604.41,730.99a40.78,40.78 0,0 1,10.46 -50.26c0.84,-0.63 1.67,-1.26 2.5,-1.9a0.43,0.43 0,0 1,0.12 -0.08c80.54,-62.01 111.33,-166.54 68.05,-250.55 -19.93,-38.69 -52.54,-67.13 -91.44,-83.64a219.05,219.05 0,0 1,148.91 114.05c52.19,101.31 17.85,224.4 -76.04,284.87q-5.29,3.43 -10.86,6.57A40.79,40.79 0,0 1,604.41 730.99Z"></path>-->
 </vector>
