--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,6 +44,10 @@
         <item name="android:background">@drawable/custom_button_bg</item>
     </style>
 
+    <style name="AppTheme.ShadowRipple">
+        <item name="colorControlHighlight">@color/colorPrimaryDark</item>
+    </style>
+
     <style name="CustomMaterialCardView" parent="Widget.MaterialComponents.BottomSheet.Modal">
         <item name="android:bottomRightRadius">6dp</item>
         <item name="android:bottomLeftRadius">6dp</item>
