--- a/app/src/main/res/layout/full_content_password_bottomsheet.xml
+++ b/app/src/main/res/layout/full_content_password_bottomsheet.xml
@@ -16,9 +16,9 @@
         android:layout_marginTop="35dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/roboto_light"
-        android:text=""
         android:textColor="@color/colorTextWhite87"
         android:textSize="28sp"
+        android:text="@string/txt_label_typed_password"
         tools:text="Digite sua senha" />
 
     <androidx.appcompat.widget.AppCompatEditText
@@ -50,7 +50,7 @@
     <!--app:srcCompat="@drawable/ic_arrow_forward" />-->
 
     <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
-        android:id="@+id/btn_id"
+        android:id="@+id/circularButton"
         android:layout_width="120dp"
         android:layout_height="55dp"
         android:layout_alignParentEnd="true"
@@ -61,8 +61,8 @@
         android:gravity="center"
         android:text="@string/txt_label_login"
         android:textColor="@color/colorTextWhite87"
-        app:backgroundTint="@color/colorAccent" />
-    <!--app:spinning_bar_width="4dp" -->
-    <!--app:spinning_bar_color="#FFF"-->
-    <!--app:spinning_bar_padding="6dp"-->
+        app:backgroundTint="@color/colorAccent"
+        app:spinning_bar_color="#FFF"
+        app:spinning_bar_padding="6dp"
+        app:spinning_bar_width="4dp" />
 </RelativeLayout>
