--- a/app/src/main/res/layout/full_content_password_bottomsheet.xml
+++ b/app/src/main/res/layout/full_content_password_bottomsheet.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tvPassword"
+        android:id="@+id/tvLabelToday"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -25,7 +25,7 @@
         android:id="@+id/etPasswordInput"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_below="@id/tvPassword"
+        android:layout_below="@id/tvLabelToday"
         android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="20dp"
