--- a/app/src/main/res/navigation/login_navigation_graph.xml
+++ b/app/src/main/res/navigation/login_navigation_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/login_screen"
-        android:name="br.com.washi.LoginFragment"
+        android:name="br.com.washi.login.view.LoginFragment"
         android:label="LoginFragment"
         tools:layout="@layout/content_login">
         <action
@@ -17,7 +17,7 @@
 
     <dialog
         android:id="@+id/bottom_sheet_login"
-        android:name="br.com.washi.BottomSheetLoginFragment"
+        android:name="br.com.washi.login.view.BottomSheetLoginFragment"
         android:label="BottomSheetLoginFragment"
         tools:layout="@layout/fragment_bottom_sheet_login">
         <action
@@ -27,8 +27,13 @@
 
     <dialog
         android:id="@+id/bottom_sheet_password"
-        android:name="br.com.washi.BottomSheetPasswordFragment"
+        android:name="br.com.washi.login.view.BottomSheetPasswordFragment"
         android:label="BottomSheetPasswordFragment"
-        tools:layout="@layout/fragment_bottom_sheet_password" />
+        tools:layout="@layout/fragment_bottom_sheet_password">
+        <action
+            android:id="@+id/action_bottom_sheet_password_to_solicitation_navigation_graph"
+            app:destination="@id/solicitation_navigation_graph" />
+    </dialog>
+    <include app:graph="@navigation/home_navigation_graph" />
 
 </navigation>
