--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorTextBlack">#000000</color>
     <color name="colorTextWhite87">#DEFFFFFF</color>
     <color name="colorTextWhite54">#8AFFFFFF</color>
+    <color name="placeholder_bg">#D3D3D3</color>
 </resources>
