--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="fab_margin">20dp</dimen>
     <dimen name="bottom_sheet_default_peek_height">350dp</dimen>
+    <dimen name="placeholder_height">40dp</dimen>
 </resources>
