--- a/app/src/main/res/layout/card_wash_service.xml
+++ b/app/src/main/res/layout/card_wash_service.xml
@@ -5,8 +5,6 @@
     android:id="@+id/id_card"
     android:layout_width="180dp"
     android:layout_height="180dp"
-    android:layout_marginStart="12dp"
-    android:layout_marginEnd="25dp"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="10dp"
     android:foreground="?android:attr/selectableItemBackground"
@@ -21,23 +19,23 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/nameProduct"
+            android:id="@+id/service_name"
             style="@style/TitleDarkLargeWashi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
-            android:maxLines="1"
+            android:maxLines="2"
             android:textColor="@color/colorPrimaryDark"
-            tools:text="Lavagem" />
+            tools:text="Lavar" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imageProduct"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:id="@+id/service_image"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="25dp"
