--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="fab_margin">20dp</dimen>
     <dimen name="bottom_sheet_default_peek_height">350dp</dimen>
     <dimen name="placeholder_height">40dp</dimen>
+    <dimen name="item_spacing">10dp</dimen>
 </resources>
