--- a/app/src/main/res/layout/full_content_password_bottomsheet.xml
+++ b/app/src/main/res/layout/full_content_password_bottomsheet.xml
@@ -22,7 +22,7 @@
         tools:text="Digite sua senha" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etPasswordInput"
+        android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_below="@id/tvLabelToday"
